--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <title>Architecure</title>
+        <style type="text/css" media="all">
+            * {
+                padding: 0;
+                margin: 0;
+                box-sizing: border-box;
+                font-family: Verdana, Sans-Serif;
+            }
+            a {
+                text-decoration: none;
+                color: #000000;
+                font-size: 16px;
+            }
+            .navbar {
+                background: #f5f5f5;
+                word-spacing: 3px;
+            }
+            .navbar > .nav-section {
+                width: 100%;
+                padding: 8px 16px;
+                display: inline-block;
+            }
+            .navbar > .nav-section > a {
+                float: left;
+                padding: 8px 16px;
+            }
+            .navbar > .nav-section > a:hover {
+                background: #e5e5e5;
+            }
+            .navbar > .nav-section > .nav-right {
+                float: right;
+                display: inline-block;
+            }
+            .navbar > .nav-section > .nav-right > a {
+                padding: 8px 16px;
+                float: left;
+            }
+            .navbar > .nav-section > .nav-right > a:hover {
+                background: #e5e5e5;
+            }
+        </style>
+    </head>
+    <body>
+        <nav class="navbar">
+            <section class="nav-section">
+                <a href="#"><span style="font-weight: bold;">BR</span> Arcihtects</a>
+                <section class="nav-right">
+                    <a href="#">Projects</a>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                </section>
+            </section>
+        </nav>
+    </body>
+</html>
