--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             }
             .navbar > .nav-section {
                 width: 100%;
-                padding: 10px 16px;
+                padding: 8px 16px;
                 display: inline-block;
             }
             .navbar > .nav-section > a {
@@ -69,11 +69,12 @@
                 font-weight: 400;
                 position: absolute;
             }
-            .header > h1 > span {
+            .header > h1 > span:first-child {
                 background: rgba(0, 0, 0, 0.7);;
                 color: #ffffff;
-                padding: 8px 16px;
+                padding: 8px 12px;
                 font-weight: bold;
+                margin: 0 12px;
             }
             .header > img {
                 width: 100%;
@@ -217,6 +218,43 @@
                     margin: 64px 0 0;
                 }
             }
+            
+            @media only screen and (max-width: 430px) {
+                .navbar > .nav-section {
+                    width: 100%;
+                    padding: 8px 16px;
+                    display: inline-block;
+                }
+                .navbar > .nav-section > .nav-right {
+                    float: right;
+                    display: none;
+                }
+                .header > h1 > span:last-child {
+                    display: none;
+                    width: fit-content;
+                    color: #ffffff;
+                    margin: 25% auto;
+                    left: 0;
+                    right: 0;
+                    z-index: 0;
+                    font-weight: 400;
+                    position: absolute;
+                }
+                #container > .projects > .project-img {
+                    display: grid;
+                    grid-template-columns: repeat(1, 1fr);
+                    grid-template-rows: repeat(8, 8fr);
+                    grid-gap: 16px;
+                }
+                 #container > .about > .about-img {
+                    display: grid;
+                    grid-template-columns: repeat(1, 1fr);
+                    grid-template-rows: repeat(4, 4fr);
+                    grid-gap: 16px;
+                    margin: 64px 0 0;
+                }
+                
+            }
         </style>
     </head>
     <body>
@@ -231,7 +269,7 @@
             </section>
         </nav>
         <header class="header">
-            <h1><span>BR</span> Architect</h1>
+            <h1><span>BR</span><span>Architect</span></h1>
             <img src="https://www.w3schools.com/w3images/architect.jpg" alt="architect" />
         </header>
         <div id="container">
