--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 background: rgba(0, 0, 0, 0.85);;
                 color: #ffffff;
                 opacity: 0.8;
+                margin: 0;
                 padding: 6px 12px;
                 font-size: 14px;
             }
@@ -264,7 +265,7 @@
                 <section class="nav-right">
                     <a href="#projects">Projects</a>
                     <a href="#about">About</a>
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                 </section>
             </section>
         </nav>
@@ -367,8 +368,8 @@
                 </section>
             </div>
             
-            <div class="contact">
-                <h2>About</h2>
+            <div class="contact" id="contact">
+                <h2>Contact</h2>
                 <p>Lets get in touch and talk about your next project.</p>
                 <form class="contact-form" accept-charset="utf-8">
                     <input type="text" id="" placeholder="Name..." />
