--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav class="navbar">
             <section class="nav-section">
-                <a href="#"><span style="font-weight: bold;">BR</span> Arcihtects</a>
+                <a href="#"><span style="font-weight: bold;">BR</span> Architects</a>
                 <section class="nav-right">
                     <a href="#projects">Projects</a>
                     <a href="#about">About</a>
@@ -18,7 +18,7 @@
             </section>
         </nav>
         <header class="header">
-            <h1><span>BR</span><span>Architect</span></h1>
+            <h1><span>BR</span><span>Architects</span></h1>
             <img src="https://www.w3schools.com/w3images/architect.jpg" alt="architect" />
         </header>
         <div id="container">
